syntax = "proto3";

package antelope.accounts.v1;

import "google/protobuf/timestamp.proto";

message Accounts {
  repeated Account accounts = 1;
}

message Account {
  string name = 1;                                // account name
  string creator = 2;                             // account creator
  google.protobuf.Timestamp timestamp = 3;        // account creation time stamp
  string owner_public_key = 4;                    // owner permission public key
  string active_public_key = 5;                   // active permission public key
  uint32 ram_bytes = 6;                           // amount of RAM bought
  string trx_id = 7;                              // transaction id
  uint32 ordinal = 8;                             // order within the transaction
  int64 counter = 9;                              // account global "mint number" starting with 1
}